--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div id="container">
    <div id="headerImage"><img src="resources/alchemist.jpg" alt=""></div>
-   <div></div>
-   <div></div>
+   <div><img id= "Al" src="resources/images.jpeg" alt=""></div>
+   <div><img id= "Ed" src="resources/resources/edward-elric-fullmetal-alchemist-brotherhood-four-panel-comic-theater-62.8.jpg" alt=""></div>
    <div></div>
    <div></div>
    <div></div>
