--- a/index.html
+++ b/index.html
@@ -5,17 +5,39 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
-    <title></title>
+    <title>Fullmetal Alchemist</title>
   </head>
   <body>
-
+  <h1>Fullmetal Alchemist
+  </h1>
+  <h2>Summary</h2>
+  <p>Al and Ed elric are two brothers on a quest to get their bodies back.
+ Al and Ed lost their bodies by committing the greatest taboo in alchemy human transmutation in order to bring back their dead mother.
+Alchemy has only one law equivalent exchange meaning something must be given of equal value in order to finish the pact.
+But what could be equal to a human soul. For that Edward lost a leg and arm while al payed the greatest price of losing his whole body.
+Now Ed must join the military to find clues on how to recover what has been lost.
+<div><img id="bruh" src="resources/transmutation2.gif" alt=""></div>
+</p>
+<h3>The step to alchemy</h3>
+<p>Alchemy has three steps comprehension, deconstruction and Reconstruction.
+Comprehension is the act of understanding what the molecular structure is of that object that is desired.
+Deconstruction is the use of energy used to mold down the physical structure of the material.
+Reconstruction reforms the material into a new object. The molecules most equal to the molecules started with. One should never try humman transmutation the results are devastating.</p>
+<div><img id="meh" src="resources/transmutation1.gif" alt=""></div>
+<h4>What are transmutation circles?</h4>
+<p>Transmutation circles are created by the user drawing the necesary symbols on the desired area. First a circle is drawn to connect the flow of energy. In the circle alchemy ruins are the ancient alchemy text used to give the circle direction the transformation sould take. </p>
+<div><img id="oh" src="resources/giphy.gif" alt=""></div>
+<div><img id="ugh" src="resources/human_transmutation_by_fake_madao-d6260ez.gif" alt=""></div>
     <div id="container">
-   <div id="headerImage"><img src="resources/alchemist.jpg" alt=""></div>
    <div><img id= "Al" src="resources/images.jpeg" alt=""></div>
-   <div><img id= "Ed" src="resources/resources/edward-elric-fullmetal-alchemist-brotherhood-four-panel-comic-theater-62.8.jpg" alt=""></div>
-   <div></div>
-   <div></div>
-   <div></div>
+   <div><img id= "Ed" src="resources/edward-elric-fullmetal-alchemist-brotherhood-four-panel-comic-theater-62.8.jpg" alt=""></div>
+   <div><img id= "Win" src="resources/Winry.png" alt=""></div>
+   <div><img id="Lady" src="resources/master.jpeg" alt=""></div>
+   <div><img id="Hughes" src="resources/hughes.png" alt=""></div>
+   <div><img id="Hawkeye" src="resources/Hawkeye.jpeg" alt=""></div>
+   <div><img id="Roy" src="resources/Roy.jpeg" alt=""></div>
+   <div><a href="https://www.youtube.com/watch?v=Hh6T8vmm1s8”><img id="Armstrong" src="resources/Armstrong.jpeg" alt=""> </a></div>
+   <div><img id="Envy" src="resources/envy.jpeg" alt=""></div>
    <div></div>
    <div></div>
    <div></div>
