--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ But what could be equal to a human soul. For that Edward lost a leg and arm whil
 Now Ed must join the military to find clues on how to recover what has been lost.
 <div><img id="bruh" src="resources/transmutation2.gif" alt=""></div>
 </p>
-<h3>The step to alchemy</h3>
+<h3>The steps to alchemy</h3>
 <p>Alchemy has three steps comprehension, deconstruction and Reconstruction.
 Comprehension is the act of understanding what the molecular structure is of that object that is desired.
 Deconstruction is the use of energy used to mold down the physical structure of the material.
@@ -29,15 +29,38 @@ Reconstruction reforms the material into a new object. The molecules most equal 
 <div><img id="oh" src="resources/giphy.gif" alt=""></div>
 <div><img id="ugh" src="resources/human_transmutation_by_fake_madao-d6260ez.gif" alt=""></div>
     <div id="container">
-   <div><img id= "Al" src="resources/images.jpeg" alt=""></div>
-   <div><img id= "Ed" src="resources/edward-elric-fullmetal-alchemist-brotherhood-four-panel-comic-theater-62.8.jpg" alt=""></div>
-   <div><img id= "Win" src="resources/Winry.png" alt=""></div>
-   <div><img id="Lady" src="resources/master.jpeg" alt=""></div>
+   <div><a href = "http://www.otakuandfit.com/alphonse-elric-cosplay-tutorial-full-metal-alchemist/"><img id= "Al" src="resources/images.jpeg" alt=""></a></div>
+<p>Alphonse lost his body trying to bring back his mother, his brother Edward brought him back by bonding his soul to armor. Al is often mistaken as the Fullmetal Alchemist because of his stacher.</p>
+ <div><img id="Al3" src="resources/325ff8878bf2aeb1d53d0f2358523ad7.gif" alt=""></div>
+   <div><a href= "https://www.amazon.com/Miccostumes-Fullmetal-Alchemist-Cosplay-Costume/dp/B00F4LM27Y" ><img id= "Ed" src="resources/edward-elric-fullmetal-alchemist-brotherhood-four-panel-comic-theater-62.8.jpg" alt=""></a></div>
+   <p>The Fullmetal Alchemist who lost his leg to bring back mother and he lost his arm to tie his brother’s soul to armor. Edward is able to use alchemy without drawing a transmutation circle. Automail is used to replace his lost limbs. He does not like to be called short.
+</p>
+ <div><img id="Ed2" src="resources/DwjetrV.gif" alt=""></div>
+   <div><a href= "https://www.amazon.com/Miccostumes-Fullmetal-Alchemist-Cosplay-Automail/dp/B01AXQEEI4"><img id= "Win" src="resources/Winry.png" alt=""></a></div>
+   <p>Childhood friend of Edward and Alphonse Elric. Her parents died in the Ishvalan War leaving her to have a negative view about the military. She obsessed with automail and she the one who repairs edward's automail.</p>
+    <div><img id="winry2" src="resources/6c61339de47d899bdee094423924989d.gif" alt=""></div>
+   <div><a href= "http://www.ancient-symbols.com/alchemy_symbols.html"><img id="Lady" src="resources/master.jpeg" alt=""></a></div>
+   <p>The former alchemy master of Edward and Alphonse. She can do alchemy without having to draw a transmutation circles. Everytime she greets her students a fight is ready to ensue.
+</p>
+<div><img id= "lady2" src="resources/ELU6PVy.gif" alt=""></div>
    <div><img id="Hughes" src="resources/hughes.png" alt=""></div>
-   <div><img id="Hawkeye" src="resources/Hawkeye.jpeg" alt=""></div>
-   <div><img id="Roy" src="resources/Roy.jpeg" alt=""></div>
-   <div><a href="https://www.youtube.com/watch?v=Hh6T8vmm1s8”><img id="Armstrong" src="resources/Armstrong.jpeg" alt=""> </a></div>
+   <p>Hughes works in the military and is Roy Mustangs superior. He loves his family and tends to brag to his coworkers about his lovely wife and adorable daughter.</p>
+    <div><img id="Hughes2" src="resources/giphy-1.gif" alt=""></div>
+   <div><a href= "https://www.youtube.com/watch?v=16uQgavsg5w"><img id="Hawkeye" src="resources/Hawkeye.jpeg" alt=""></a></div>
+   <p>Hawkeye works in the military. She works under Roy Mustang often having keep him line when he forgets he can’t fight in the rain. She fights with guns.
+</p>
+ <div><img id="Hawkeye2" src="resources/original.gif" alt=""></div>
+   <div><a href= "http://www.crunchyroll.com/fullmetal-alchemist-brotherhood/episode-1-fullmetal-alchemist-718109"><img id="Roy" src="resources/Roy.jpeg" alt=""></a></div>
+   <p> Roy Mustang is a hero of the Ishvalan War using his flame alchemy to dominate the front lines. He is the superior of the Elric brothers. His dream is to become the next leader of Amestris. He is useless when it rains.
+</p>
+ <div><img id="Roy2" src="resources/c1cb17c6d0ed29b1d586091d558033ba.gif" alt=""></div>
+   <div><a href="https://www.youtube.com/watch?v=Hh6T8vmm1s8"><img id= "Armstrong" src="resources/Armstrong.jpeg"alt=""> </a> </div>
+   <p>Alex Louis Armstrong a proud member of the Armstrong family, he tends to rip off his shirts when performing a speech. He’s a state alchemist rivaling the powers of Roy and Ed.
+</p>
+ <div><img id="Armstrong2" src="resources/full_metal_alchemist_gif_by_ryuzakiakal-d59qox3.gif" alt=""></div>
    <div><img id="Envy" src="resources/envy.jpeg" alt=""></div>
+   <p>The physical personification of envy from the 7 deadly sins. Envy has the ability to take the identity of anyone he desires. He’s a creature known as a homunculus.</p>
+    <div><img id="Envy2" src="resources/envy_gif_by_heavenlyhomunculus-d3g6mh5.gif" alt=""></div>
    <div></div>
    <div></div>
    <div></div>
